[gd_scene load_steps=5 format=3 uid="uid://cicnblkqvbcmt"]

[ext_resource type="Script" path="res://minijeu_11/game.gd" id="1_pd8c2"]
[ext_resource type="PackedScene" uid="uid://dukity2hk3x2q" path="res://minijeu_11/border.tscn" id="2_mivat"]
[ext_resource type="PackedScene" uid="uid://bl0rbrw1jd5nk" path="res://minijeu_11/player.tscn" id="3_6egrj"]
[ext_resource type="PackedScene" uid="uid://ykcvnqy7tap6" path="res://minijeu_11/cadmium.tscn" id="4_mn8lq"]

[node name="Node" type="Node"]
script = ExtResource("1_pd8c2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 1, 0.984314, 1)

[node name="border" parent="." instance=ExtResource("2_mivat")]
position = Vector2(576, 324)

[node name="player" parent="." instance=ExtResource("3_6egrj")]
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)

[node name="cadmium" parent="." instance=ExtResource("4_mn8lq")]
position = Vector2(578, 235)

[node name="TEXT" type="CanvasLayer" parent="."]

[node name="win_state" type="Label" parent="TEXT"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="time" type="Label" parent="TEXT"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="explanation" type="Label" parent="TEXT"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.00392157, 0.745098, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 30

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -38.5
offset_right = 63.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start
"

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -77.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Restart
"

[node name="Button3" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "to menu"

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "coins :"

[connection signal="area_exited" from="border" to="." method="_on_border_area_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
